--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,5 +6,8 @@
       <directory>./tests</directory>
     </testsuite>
   </testsuites>
+  <logging>
+    <log type="coverage-clover" target="build/logs/clover.xml"/>
+  </logging>
 
 </phpunit>
